--- a/cold_email_roi_spreadsheet.html
+++ b/cold_email_roi_spreadsheet.html
@@ -957,7 +957,21 @@
         }
 
         function updateCampaignData(index, field, value) {
-            campaignData[index][field] = parseFloat(value) || 0;
+            if (field === 'date') {
+                campaignData[index][field] = value;
+                
+                // Auto-fill subsequent dates if this is the first week
+                if (index === 0) {
+                    const startDate = new Date(value);
+                    for (let i = 1; i < campaignData.length; i++) {
+                        const nextDate = new Date(startDate);
+                        nextDate.setDate(startDate.getDate() + (i * 7));
+                        campaignData[i].date = nextDate.toISOString().split('T')[0];
+                    }
+                }
+            } else {
+                campaignData[index][field] = parseFloat(value) || 0;
+            }
             calculateCampaignRow(index);
             renderCampaignTable();
             updateDashboard();
@@ -1009,6 +1023,15 @@
         }
 
         function updateDashboard() {
+            const currentDate = new Date();
+            
+            // Filter campaign data by date (only past and current weeks)
+            const activeCampaignData = campaignData.filter(row => {
+                const rowDate = new Date(row.date);
+                return rowDate <= currentDate;
+            });
+
+            // For debugging - temporarily show all data regardless of date
             const totals = campaignData.reduce((acc, row) => {
                 acc.emailsSent += row.emailsSent;
                 acc.responses += row.responses;
@@ -1110,28 +1133,79 @@
                     datasets: [{
                         label: 'Revenue',
                         data: revenues,
-                        backgroundColor: 'rgba(59, 130, 246, 0.8)',
-                        borderColor: 'rgba(59, 130, 246, 1)',
-                        borderWidth: 1
+                        backgroundColor: 'rgba(148, 163, 184, 0.8)',
+                        borderColor: '#94a3b8',
+                        borderWidth: 0,
+                        borderRadius: 6,
+                        borderSkipped: false
                     }, {
                         label: 'Investment',
                         data: investments,
-                        backgroundColor: 'rgba(239, 68, 68, 0.8)',
-                        borderColor: 'rgba(239, 68, 68, 1)',
-                        borderWidth: 1
+                        backgroundColor: 'rgba(239, 68, 68, 0.6)',
+                        borderColor: '#ef4444',
+                        borderWidth: 0,
+                        borderRadius: 6,
+                        borderSkipped: false
                     }]
                 },
                 options: {
                     responsive: true,
+                    maintainAspectRatio: true,
                     plugins: {
                         title: {
                             display: true,
-                            text: 'Revenue vs Investment by Week'
+                            text: 'Revenue vs Investment Timeline',
+                            font: {
+                                size: 18,
+                                weight: 'bold'
+                            },
+                            color: '#1e293b',
+                            padding: 20
+                        },
+                        legend: {
+                            position: 'top',
+                            labels: {
+                                usePointStyle: true,
+                                padding: 20,
+                                font: {
+                                    size: 12,
+                                    weight: 'bold'
+                                }
+                            }
                         }
                     },
                     scales: {
+                        x: {
+                            grid: {
+                                display: false
+                            },
+                            ticks: {
+                                font: {
+                                    size: 11
+                                },
+                                color: '#64748b'
+                            }
+                        },
                         y: {
-                            beginAtZero: true
+                            beginAtZero: true,
+                            grid: {
+                                color: 'rgba(0,0,0,0.05)',
+                                drawBorder: false
+                            },
+                            ticks: {
+                                font: {
+                                    size: 11
+                                },
+                                color: '#64748b',
+                                callback: function(value) {
+                                    return '$' + value.toLocaleString();
+                                }
+                            }
+                        }
+                    },
+                    elements: {
+                        bar: {
+                            borderRadius: 8
                         }
                     }
                 }
