Prefill tables with realistic scenario values: 20% Open Rate, 8% CTA Click, 25% Try Product, 15% Buy 40 Credits, 10% Buy 60 Credits

--- a/cold_email_roi_spreadsheet.html
+++ b/cold_email_roi_spreadsheet.html
@@ -1174,16 +1174,16 @@
                     week: weekData.week,
                     date: startDate.toISOString().split('T')[0],
                     emailsSent: weekData.emails,
-                    responseRate: 0.02, // 2% from document
+                    responseRate: 0.20, // 20% Open Rate
                     responses: 0,
-                    ctaClickRate: 0.15, // 15% of opened emails click CTA
+                    ctaClickRate: 0.08, // 8% CTA Click Rate
                     ctaClicks: 0,
-                    tryRate: 0.3, // Estimated - you can adjust
+                    tryRate: 0.25, // 25% Try Product Rate
                     triers: 0,
-                    buy40Rate: 0.15, // Estimated - you can adjust
+                    buy40Rate: 0.15, // 15% Buy 40 Credits
                     buyers40: 0,
                     revenue40: 0,
-                    buy60Rate: 0.1, // Estimated - you can adjust
+                    buy60Rate: 0.10, // 10% Buy 60 Credits
                     buyers60: 0,
                     revenue60: 0,
                     totalRevenue: 0
@@ -1457,16 +1457,16 @@
                 week: newWeek,
                 date: lastDate.toISOString().split('T')[0],
                 emailsSent: 0,
-                responseRate: 0.02,
+                responseRate: 0.20,
                 responses: 0,
-                ctaClickRate: 0.15,
+                ctaClickRate: 0.08,
                 ctaClicks: 0,
-                tryRate: 0.3,
+                tryRate: 0.25,
                 triers: 0,
                 buy40Rate: 0.15,
                 buyers40: 0,
                 revenue40: 0,
-                buy60Rate: 0.1,
+                buy60Rate: 0.10,
                 buyers60: 0,
                 revenue60: 0,
                 totalRevenue: 0
